backends/drm: reimplement software brightness for ICC profiles

When moving to reference luminance based brightness control, I forgot to port this

BUG: 500210